# cooee

./: .gitignore  README.md  cooee.ipynb  metadata.json  pyproject.toml  requirements.txt  ro-crate-metadata.json
